@@ -1,2 +1,4 @@
 ## clientshare
 Clientshare is for bridging chat services to IRC channels, this is the last time I'll make a project related to bridging certain anything chat-related to IRC channels. Mainly because this is tiring to pull off and in most cases, if API usage is required, rate-limitation may occur.
+
+
