@@ -1,3 +1,4 @@
 # changelogs
 1/22/23: update `readme.md`
 1/22/23: added `package.json`
+1/22/24: added './example/steam.js`
